Sutter Health/src/objects/Benefit_Plan_Metadata__c.object
<CustomObject>
    <fields>
        <fullName>Ancillary_EOC_Version__c</fullName>
        <label>Ancillary EOC Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ancillary_EOC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ancillary EOC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ancillary_GSA_Version__c</fullName>
        <label>Ancillary GSA Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ancillary_GSA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ancillary GSA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ancillary_SOB_Version__c</fullName>
        <label>Ancillary SOB Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ancillary_SOB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ancillary SOB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BCM_Version__c</fullName>
        <description>Used to capture BCM version</description>
        <label>BCM Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BCM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Benefit_Grid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Benefit Grid</label>
        <referenceTo>SHP_Benefit_Grid__c</referenceTo>
        <relationshipLabel>Benefit Plan Metadata</relationshipLabel>
        <relationshipName>Benefit_Plan_Metadata</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Benefit_Plan_ID__c</fullName>
        <label>Benefit Plan ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Share__c</fullName>
        <label>Cost Share</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Benefit_Plan_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Custom Benefit Plan ID</label>
        <referenceTo>Custom_Benefit_Plan__c</referenceTo>
        <relationshipLabel>Benefit Plan Metadata</relationshipLabel>
        <relationshipName>Benefit_Plan_Metadata</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DOV__c</fullName>
        <label>DOV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deductible__c</fullName>
        <inlineHelpText>for a Family of one Member</inlineHelpText>
        <label>For self-only enrollment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOC_Version__c</fullName>
        <description>Used to capture EOC version</description>
        <label>EOC Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EOC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Emergency_Room__c</fullName>
        <label>Emergency Room</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Family_Deductible__c</fullName>
        <inlineHelpText>for Family of two or more Members</inlineHelpText>
        <label>For an entire Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_OOPM__c</fullName>
        <inlineHelpText>for Family of two or more Members</inlineHelpText>
        <label>For an entire Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ind_Family_Deductible__c</fullName>
        <inlineHelpText>for Family of one or more Members</inlineHelpText>
        <label>For any one Member in a Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ind_Family_OOPM__c</fullName>
        <inlineHelpText>for Family of one or more Members</inlineHelpText>
        <label>For any one Member in a Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inpatient__c</fullName>
        <label>Inpatient</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActivelyMarketed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ActivelyMarketed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCustom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Plan?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsHMO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HMO?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsMirrored__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mirrored?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPartDCreditable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PartDCreditable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRider__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rider?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Large Group</fullName>
                </value>
                <value>
                    <fullName>Small Group</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_OR_Rider__c</fullName>
        <label>Medical OR Rider</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_ID__c</fullName>
        <label>Object ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Visit__c</fullName>
        <label>Office Visit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_of_Pocket_Maximum__c</fullName>
        <inlineHelpText>for a Family of one Member</inlineHelpText>
        <label>For self-only enrollment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outpatient__c</fullName>
        <label>Outpatient</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Name__c</fullName>
        <label>Plan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Related_to_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan Related to Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Benefit Plan Metadata</relationshipLabel>
        <relationshipName>Benefit_Plan_Metadata</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_Status__c</fullName>
        <label>Plan Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <label>Plan Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Year__c</fullName>
        <label>Plan Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Year_Plan_ID__c</fullName>
        <label>Previous Year Plan ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Class__c</fullName>
        <label>Product Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Coinsurance</fullName>
                </value>
                <value>
                    <fullName>HDHP</fullName>
                </value>
                <value>
                    <fullName>HMO Local</fullName>
                </value>
                <value>
                    <fullName>Mirrored</fullName>
                </value>
                <value>
                    <fullName>Split</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Types__c</fullName>
        <label>Product Types</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HMO</fullName>
                </value>
                <value>
                    <fullName>HMO - Plus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RX_Tier_1__c</fullName>
        <label>RX - Tier 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RX_Tier_2__c</fullName>
        <label>RX - Tier 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RX_Tier_3__c</fullName>
        <label>RX - Tier 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rider_Cost_Share__c</fullName>
        <label>Rider Cost Share</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rx_Deductible_Family__c</fullName>
        <label>For an entire Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rx_Deductible_Ind_Family__c</fullName>
        <label>For any one Member in a Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rx_Deductible_Individual__c</fullName>
        <label>For self-only enrollment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBC_Version__c</fullName>
        <description>Used to capture SBC version</description>
        <label>SBC Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SBC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Specialist_Office_Visit__c</fullName>
        <label>Specialist Office Visit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This field contains Benefit Plan ID_Plan Year_Plan Name</inlineHelpText>
        <label>Unique ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version_Number__c</fullName>
        <label>Version Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visit_Limit__c</fullName>
        <label>Rider Visit Limit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>distributionChannels__c</fullName>
        <label>distributionChannels</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Private Exchange</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fundingArrangements__c</fullName>
        <label>fundingArrangements</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fully Insured</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hixMetalLevel__c</fullName>
        <label>hixMetalLevel</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isHDHP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HDHP?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>memberFundings__c</fullName>
        <label>memberFundings</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HSA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>planTypeAlternate__c</fullName>
        <label>planTypeAlternate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>udfplan_marketingPlanName__c</fullName>
        <label>udfplan_marketingPlanName</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>Benefit Plan Metadata</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Plan_Name__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Plan_Year__c</columns>
        <columns>Benefit_Grid__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>Product_Class__c</columns>
        <columns>Product_Types__c</columns>
        <columns>Plan_Type__c</columns>
        <columns>Medical_OR_Rider__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Approved_Riders_HDHP_2016</fullName>
        <booleanFilter>(1 AND 2 AND 3) AND (4 OR 5)</booleanFilter>
        <columns>NAME</columns>
        <columns>Benefit_Plan_ID__c</columns>
        <columns>Benefit_Grid__c</columns>
        <columns>Plan_Type__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Product_Class__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>IsActivelyMarketed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Medical_OR_Rider__c</field>
            <operation>equals</operation>
            <value>Rider</value>
        </filters>
        <filters>
            <field>Plan_Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <filters>
            <field>isHDHP__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Plan_Status__c</field>
            <operation>equals</operation>
            <value>Available for Sale - Approved,Soft Approved</value>
        </filters>
        <filters>
            <field>Plan_Status__c</field>
            <operation>equals</operation>
            <value>Available for Sale - Pending Regulatory Approval</value>
        </filters>
        <label>Approved Riders - HDHP - 2016</label>
        <sharedTo>
            <group>Benefit_Plan_Administration</group>
            <group>Custom_Plan_Final_Approver_Group</group>
            <group>Enrollment_QA</group>
            <group>SHP_BPA_Approvers_Group</group>
            <group>SHP_BPA_Custom_Plan_Soft_Approver_Group</group>
            <group>SHP_BPA_Group</group>
            <group>SHP_BPA_QA_Group</group>
            <group>SHP_Benefits</group>
            <group>SHP_Billing</group>
            <group>SHP_Billing_Mailing_Group</group>
            <group>SHP_CalChoice_Enrollment</group>
            <group>SHP_CalChoice_Enrollment_Mailing_Group</group>
            <group>SHP_Claim</group>
            <group>SHP_Claim_Notification</group>
            <group>SHP_Clinical_Services</group>
            <group>SHP_Correspondence</group>
            <group>SHP_Correspondence_Mailing_Group</group>
            <group>SHP_Correspondence_Read_Access</group>
            <group>SHP_Enrollment</group>
            <group>SHP_Enrollment_Mailing_Group</group>
            <group>SHP_Enrollment_SCN</group>
            <group>SHP_Enrollment_SCN_Mailing_Group</group>
            <group>SHP_Executive_Group</group>
            <group>SHP_Front_Office</group>
            <group>SHP_Legal_Compliance_Team</group>
            <group>SHP_Legal_Compliance_Team_Mailing</group>
            <group>SHP_MSR_Onboarding</group>
            <group>SHP_Medical_Review_Unit</group>
            <group>SHP_Medical_Review_Unit_Mailing_Group</group>
            <group>SHP_Member_AG_GC</group>
            <group>SHP_Member_A_G</group>
            <group>SHP_Member_A_G_Mailing_Group</group>
            <group>SHP_Member_Grievance_Coordinator</group>
            <group>SHP_Member_Grievance_Coordinator_Mailing</group>
            <group>SHP_Member_Grievance_Exempt</group>
            <group>SHP_Member_Grievance_Exempt_Mailing</group>
            <group>SHP_Member_Service_Call_Back</group>
            <group>SHP_Member_Service_Call_Back_Mailing</group>
            <group>SHP_Member_Services_Management</group>
            <group>SHP_Member_Services_Management_Mailing</group>
            <group>SHP_Member_Services_Portal_Req_Mailing</group>
            <group>SHP_Member_Services_Portal_Request</group>
            <group>SHP_OOA_OON</group>
            <group>SHP_OOA_OON_Mailing_Group</group>
            <group>SHP_OOA_OON_View_Only</group>
            <group>SHP_PHI</group>
            <group>SHP_PSR_Onboarding</group>
            <group>SHP_Provider_Directory_Inaccuracy_A_G</group>
            <group>SHP_Provider_Dispute_Level_2</group>
            <group>SHP_Provider_Dispute_Level_2_Mailing</group>
            <group>SHP_Provider_Services</group>
            <group>SHP_Provider_Services_Mailing_Group</group>
            <group>SHP_Public_Action</group>
            <group>SHP_Sales</group>
            <group>SHP_Sales_Mailing_Group</group>
            <group>SHP_Sales_Service_Rep</group>
            <group>SHP_Sales_to_Service_Sharing_Group</group>
            <group>SHP_Service</group>
            <group>SHP_Web_Grievance_R_W_Access_Group</group>
            <group>SHP_Web_Grievance_Read_Access_Group</group>
            <group>Underwriter</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Approved_Riders_HMO_2016</fullName>
        <booleanFilter>(1 AND 2 AND 3) AND (4 OR 5)</booleanFilter>
        <columns>NAME</columns>
        <columns>Benefit_Plan_ID__c</columns>
        <columns>Benefit_Grid__c</columns>
        <columns>Plan_Type__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Product_Class__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>IsActivelyMarketed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Medical_OR_Rider__c</field>
            <operation>equals</operation>
            <value>Rider</value>
        </filters>
        <filters>
            <field>Plan_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>isHDHP__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Plan_Status__c</field>
            <operation>equals</operation>
            <value>Available for Sale - Approved,Soft Approved</value>
        </filters>
        <filters>
            <field>Plan_Status__c</field>
            <operation>equals</operation>
            <value>Available for Sale - Pending Regulatory Approval</value>
        </filters>
        <label>Approved Riders - HMO - 2017</label>
        <sharedTo>
            <group>Benefit_Plan_Administration</group>
            <group>Custom_Plan_Final_Approver_Group</group>
            <group>Enrollment_QA</group>
            <group>SHP_BPA_Approvers_Group</group>
            <group>SHP_BPA_Custom_Plan_Soft_Approver_Group</group>
            <group>SHP_BPA_Group</group>
            <group>SHP_BPA_QA_Group</group>
            <group>SHP_Benefits</group>
            <group>SHP_Billing</group>
            <group>SHP_Billing_Mailing_Group</group>
            <group>SHP_CalChoice_Enrollment</group>
            <group>SHP_CalChoice_Enrollment_Mailing_Group</group>
            <group>SHP_Claim</group>
            <group>SHP_Claim_Notification</group>
            <group>SHP_Clinical_Services</group>
            <group>SHP_Correspondence</group>
            <group>SHP_Correspondence_Mailing_Group</group>
            <group>SHP_Correspondence_Read_Access</group>
            <group>SHP_Enrollment</group>
            <group>SHP_Enrollment_Mailing_Group</group>
            <group>SHP_Enrollment_SCN</group>
            <group>SHP_Enrollment_SCN_Mailing_Group</group>
            <group>SHP_Executive_Group</group>
            <group>SHP_Front_Office</group>
            <group>SHP_Legal_Compliance_Team</group>
            <group>SHP_Legal_Compliance_Team_Mailing</group>
            <group>SHP_MSR_Onboarding</group>
            <group>SHP_Medical_Review_Unit</group>
            <group>SHP_Medical_Review_Unit_Mailing_Group</group>
            <group>SHP_Member_AG_GC</group>
            <group>SHP_Member_A_G</group>
            <group>SHP_Member_A_G_Mailing_Group</group>
            <group>SHP_Member_Grievance_Coordinator</group>
            <group>SHP_Member_Grievance_Coordinator_Mailing</group>
            <group>SHP_Member_Grievance_Exempt</group>
            <group>SHP_Member_Grievance_Exempt_Mailing</group>
            <group>SHP_Member_Service_Call_Back</group>
            <group>SHP_Member_Service_Call_Back_Mailing</group>
            <group>SHP_Member_Services_Management</group>
            <group>SHP_Member_Services_Management_Mailing</group>
            <group>SHP_Member_Services_Portal_Req_Mailing</group>
            <group>SHP_Member_Services_Portal_Request</group>
            <group>SHP_OOA_OON</group>
            <group>SHP_OOA_OON_Mailing_Group</group>
            <group>SHP_OOA_OON_View_Only</group>
            <group>SHP_PHI</group>
            <group>SHP_PSR_Onboarding</group>
            <group>SHP_Provider_Directory_Inaccuracy_A_G</group>
            <group>SHP_Provider_Dispute_Level_2</group>
            <group>SHP_Provider_Dispute_Level_2_Mailing</group>
            <group>SHP_Provider_Services</group>
            <group>SHP_Provider_Services_Mailing_Group</group>
            <group>SHP_Public_Action</group>
            <group>SHP_Sales</group>
            <group>SHP_Sales_Mailing_Group</group>
            <group>SHP_Sales_Service_Rep</group>
            <group>SHP_Sales_to_Service_Sharing_Group</group>
            <group>SHP_Service</group>
            <group>SHP_Web_Grievance_R_W_Access_Group</group>
            <group>SHP_Web_Grievance_Read_Access_Group</group>
            <group>Underwriter</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Individual_Approved_Plans_HDHP_2016</fullName>
        <booleanFilter>(1 AND 2 AND 3 AND 4 AND 5) AND (6 OR 7)</booleanFilter>
        <columns>NAME</columns>
        <columns>Benefit_Plan_ID__c</columns>
        <columns>Benefit_Grid__c</columns>
        <columns>Plan_Type__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Product_Class__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>IsActivelyMarketed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Medical_OR_Rider__c</field>
            <operation>equals</operation>
            <value>Medical</value>
        </filters>
        <filters>
            <field>Plan_Type__c</field>
            <operation>notEqual</operation>
            <value>Custom</value>
        </filters>
        <filters>
            <field>Market_Segment__c</field>
            <operation>equals</operation>
            <value>Individual Under 65</value>
        </filters>
        <filters>
            <field>Plan_Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <filters>
            <field>isHDHP__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Plan_Status__c</field>
            <operation>equals</operation>
            <value>Available for Sale - Approved,Soft Approved</value>
        </filters>
        <filters>
            <field>Plan_Status__c</field>
            <operation>equals</operation>
            <value>Available for Sale - Pending Regulatory Approval</value>
        </filters>
        <label>Individual - Approved Plans - HDHP-2016</label>
    </listViews>
    <listViews>
        <fullName>Individual_Approved_Plans_HMO_2016</fullName>
        <booleanFilter>(1 AND 2 AND 3 AND 4 AND 5) AND (6 OR 7)</booleanFilter>
        <columns>NAME</columns>
        <columns>Benefit_Plan_ID__c</columns>
        <columns>Benefit_Grid__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Product_Class__c</columns>
        <columns>Plan_Type__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>IsActivelyMarketed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Medical_OR_Rider__c</field>
            <operation>equals</operation>
            <value>Medical</value>
        </filters>
        <filters>
            <field>Plan_Type__c</field>
            <operation>notEqual</operation>
            <value>Custom</value>
        </filters>
        <filters>
            <field>Market_Segment__c</field>
            <operation>equals</operation>
            <value>Individual Under 65</value>
        </filters>
        <filters>
            <field>Plan_Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <filters>
            <field>isHDHP__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Plan_Status__c</field>
            <operation>equals</operation>
            <value>Available for Sale - Approved,Soft Approved</value>
        </filters>
        <filters>
            <field>Plan_Status__c</field>
            <operation>equals</operation>
            <value>Available for Sale - Pending Regulatory Approval</value>
        </filters>
        <label>Individual - Approved Plans - HMO -2016</label>
    </listViews>
    <listViews>
        <fullName>Large_Group_Approved_Plans_HDHP_2016</fullName>
        <booleanFilter>(1 AND 2 AND 3 AND 4 AND 5) AND (6 OR 7)</booleanFilter>
        <columns>NAME</columns>
        <columns>Benefit_Plan_ID__c</columns>
        <columns>Benefit_Grid__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Product_Class__c</columns>
        <columns>Plan_Type__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>IsActivelyMarketed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Medical_OR_Rider__c</field>
            <operation>equals</operation>
            <value>Medical</value>
        </filters>
        <filters>
            <field>Plan_Type__c</field>
            <operation>notEqual</operation>
            <value>Custom</value>
        </filters>
        <filters>
            <field>Market_Segment__c</field>
            <operation>equals</operation>
            <value>Large Group</value>
        </filters>
        <filters>
            <field>Plan_Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <filters>
            <field>isHDHP__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Plan_Status__c</field>
            <operation>equals</operation>
            <value>Available for Sale - Approved,Soft Approved</value>
        </filters>
        <filters>
            <field>Plan_Status__c</field>
            <operation>equals</operation>
            <value>Available for Sale - Pending Regulatory Approval</value>
        </filters>
        <label>Large Group - Approved Plans - HDHP-2016</label>
    </listViews>
    <listViews>
        <fullName>Large_Group_Approved_Plans_HMO_2016</fullName>
        <booleanFilter>(1 AND 2 AND 3 AND 4 AND 5) AND (6 OR 7)</booleanFilter>
        <columns>NAME</columns>
        <columns>Benefit_Plan_ID__c</columns>
        <columns>Benefit_Grid__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Product_Class__c</columns>
        <columns>Plan_Type__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>IsActivelyMarketed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Medical_OR_Rider__c</field>
            <operation>equals</operation>
            <value>Medical</value>
        </filters>
        <filters>
            <field>Plan_Type__c</field>
            <operation>notEqual</operation>
            <value>Custom</value>
        </filters>
        <filters>
            <field>Market_Segment__c</field>
            <operation>equals</operation>
            <value>Large Group</value>
        </filters>
        <filters>
            <field>Plan_Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <filters>
            <field>isHDHP__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Plan_Status__c</field>
            <operation>equals</operation>
            <value>Available for Sale - Approved,Soft Approved</value>
        </filters>
        <filters>
            <field>Plan_Status__c</field>
            <operation>equals</operation>
            <value>Available for Sale - Pending Regulatory Approval</value>
        </filters>
        <label>Large Group - Approved Plans - HMO -2016</label>
    </listViews>
    <listViews>
        <fullName>Small_Group_Approved_Plans_HDHP_2016</fullName>
        <booleanFilter>(1 AND 2 AND 3 AND 4 AND 5) AND (6 OR 7)</booleanFilter>
        <columns>NAME</columns>
        <columns>Benefit_Plan_ID__c</columns>
        <columns>Benefit_Grid__c</columns>
        <columns>Plan_Type__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Product_Class__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>IsActivelyMarketed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Medical_OR_Rider__c</field>
            <operation>equals</operation>
            <value>Medical</value>
        </filters>
        <filters>
            <field>Plan_Type__c</field>
            <operation>notEqual</operation>
            <value>Custom</value>
        </filters>
        <filters>
            <field>Market_Segment__c</field>
            <operation>equals</operation>
            <value>Small Group</value>
        </filters>
        <filters>
            <field>Plan_Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <filters>
            <field>isHDHP__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Plan_Status__c</field>
            <operation>equals</operation>
            <value>Available for Sale - Approved,Soft Approved</value>
        </filters>
        <filters>
            <field>Plan_Status__c</field>
            <operation>equals</operation>
            <value>Available for Sale - Pending Regulatory Approval</value>
        </filters>
        <label>Small Group - Approved Plans - HDHP-2016</label>
    </listViews>
    <listViews>
        <fullName>Small_Group_Approved_Plans_HMO_2016</fullName>
        <booleanFilter>(1 AND 2 AND 3 AND 4 AND 5) AND (6 OR 7)</booleanFilter>
        <columns>NAME</columns>
        <columns>Benefit_Plan_ID__c</columns>
        <columns>Benefit_Grid__c</columns>
        <columns>Plan_Type__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Product_Class__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>IsActivelyMarketed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Medical_OR_Rider__c</field>
            <operation>equals</operation>
            <value>Medical</value>
        </filters>
        <filters>
            <field>Plan_Type__c</field>
            <operation>notEqual</operation>
            <value>Custom</value>
        </filters>
        <filters>
            <field>Market_Segment__c</field>
            <operation>equals</operation>
            <value>Small Group</value>
        </filters>
        <filters>
            <field>Plan_Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <filters>
            <field>isHDHP__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Plan_Status__c</field>
            <operation>equals</operation>
            <value>Available for Sale - Approved,Soft Approved</value>
        </filters>
        <filters>
            <field>Plan_Status__c</field>
            <operation>equals</operation>
            <value>Available for Sale - Pending Regulatory Approval</value>
        </filters>
        <label>Small Group - Approved Plans - HMO -2016</label>
    </listViews>
    <nameField>
        <label>Plan ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Benefit Plan Metadata</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>